# s3d

./: .gitignore  .gitmodules  Cargo.toml  README.md  _config.yml  alias.sh  aliases.sh  build.rs  s3-server-codegen
.github/workflows/: release.yaml
codegen/: README.md  build.gradle.kts  gen_cli.rs  gen_client.rs  gen_http.rs  gen_ops.rs  gen_server.rs  gen_types.rs  mod.rs  smithy-build.json  smithy_model.rs  utils.rs
docs/: architecture.md  config.md  dev.md
examples/: client.rs  config.yaml  example1.rs  example1.sh  flow.sh  reader.rs  writer.rs
hack/: aliases.sh  build-smithy-rs.sh  codegen.sh  dev.sh  env.sh  sanity.sh  smithy-build.sh  smithy-update.sh  submodules.sh  update_models.sh
models/: update_models.sh
smithy-codegen-s3d/: build.gradle.kts  smithy-build.json
smithy-codegen-s3d/s3d-codegen/: Cargo.toml
smithy-codegen-s3d/s3d-codegen/src/: http_serde.rs  operation_deser.rs  operation_ser.rs  xml_ser.rs
smithy/s3-server-codegen/: Cargo.toml
smithy/s3-server-codegen/src/: error.rs  http_serde.rs  input.rs  lib.rs  model.rs  operation.rs  operation_deser.rs  operation_handler.rs  operation_registry.rs  operation_ser.rs  output.rs  xml_ser.rs
src/: api.rs  cli.rs  client_middleware.rs  codegen.rs  codegen_include.rs  common.rs  conf.rs  config.rs  daemon.rs  err.rs  fetch.rs  fuse.rs  gen.rs  hdr.rs  http.rs  intercept.rs  lib.rs  main.rs  ops.rs  parse.rs  proto.rs  resources.rs  router.rs  status.rs  store.rs  types.rs  util.rs  utils.rs  xml.rs
src/cli/: api_cmd.rs  cd_cmd.rs  completion_cmd.rs  get_cmd.rs  id_cmd.rs  ls_cmd.rs  mod.rs  put_cmd.rs  tag_cmd.rs
src/cmds/: mod.rs  status.rs
src/codegen/: mod.rs  s3_cli.rs  s3_client.rs  s3_http.rs  s3_server.rs  s3_types.rs
src/codegen/iam/: mod.rs  ops.rs  types.rs
src/codegen/s3/: ops.rs  types.rs
src/codegen/sts/: ops.rs  types.rs
src/daemon/: handlers.rs  mod.rs  router.rs  server-old.rs  server.rs
src/old/: headers.rs  input.rs  mod.rs  models.rs  output.rs
src/s3/: api.rs  api_to_client.rs  daemon.rs  err.rs  input.rs  input_impl.rs  kind.rs  mod.rs  op.rs  ops.rs  output.rs  output_impl.rs  serve.rs  server.rs  sub_resources.rs  types.rs
src/server/: mod.rs  router.rs  server.rs
src/temp/: api.rs  handlers.rs  mod.rs
