## https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "s3d"
version = "0.0.1-alpha.5"
authors = ["guymguym"]
edition = "2021"
description = "s3d is a daemon for efficient data access to remote S3 API storage. The promise of s3d is simple - Applications that deploy remotely from their main S3 storage, can run it as their S3 gateway to optimize data availability, performance, and costs."
homepage = "https://s3d.rs"
repository = "https://github.com/s3d-rs/s3d"
license = "Apache-2.0"
keywords = ["s3", "edge", "object", "storage", "bucket"]
categories = ["database-implementations", "filesystem", "web-programming::http-server"]

[badges]
maintenance = { status = "experimental" }

[profile.dev]

# When running in development we want to abort on panic
# to make it easier to debug. Use `export RUST_BACKTRACE=1` to print stack traces.
panic = 'abort'

[build-dependencies]
quote = "1.0.14"
proc-macro2 = "1.0.36"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"

[dependencies]

## Runtime crates

hyper = { version = "0.14.16", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
#fuser = "0.10.0"
libc = "0.2.112"
log = "0.4.14"
env_logger = "0.9.0"

## Rust related crates

paste = "1.0.6"
quote = "1.0.14"
anyhow = "1.0.52"
async-trait = "0.1.52"
proc-macro2 = "1.0.36"

## General purpose crates

bytes = "1.1.0"
base64 = "0.13.0"
chrono = "0.4.19"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "3.0.7", features = ["derive"] }

## Encoding/decoding crates

serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
envy = "0.4.2"
#serde_json = "1.0.75"
#quick-xml = "0.22.0" # seems to be more popular than other serde_xml* crates

## AWS smithy-rs crates (git submodule)

[dependencies.aws-smithy-client]
version = "0.35.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-smithy-client"
features = ["client-hyper"]
[dependencies.aws-smithy-types]
version = "0.35.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-smithy-types"
[dependencies.aws-smithy-xml]
version = "0.35.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-smithy-xml"
[dependencies.aws-smithy-http]
version = "0.35.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-smithy-http"
[dependencies.aws-smithy-http-server]
version = "0.35.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-smithy-http-server"

[dependencies.aws-config]
version = "0.5.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-config"
[dependencies.aws-sdk-s3]
version = "0.5.2"
path = "smithy-codegen-s3d/build/rust-runtime/aws-sdk-s3"

[dependencies.s3d-codegen]
version = "0.0.1"
path = "smithy-codegen-s3d/s3d-codegen"
