[package]
name = "s3-server-codegen"
version = "0.0.1"
edition = "2018"

[dependencies.async-trait]
version = "0.1"

[dependencies.aws-smithy-http]
version = "0"
#path = "../smithy-rs/rust-runtime/aws-smithy-http"

[dependencies.aws-smithy-http-server]
version = "0"
#path = "../smithy-rs/rust-runtime/aws-smithy-http-server"

[dependencies.aws-smithy-types]
version = "0"
#path = "../smithy-rs/rust-runtime/aws-smithy-types"

[dependencies.aws-smithy-xml]
version = "0"
#path = "../smithy-rs/rust-runtime/aws-smithy-xml"

[dependencies.axum-core]
version = "0.1"
[dependencies.futures-util]
version = "0.3"
[dependencies.http]
version = "0.2"
[dependencies.lazy_static]
version = "1.4"
[dependencies.percent-encoding]
version = "2"
[dependencies.pin-project-lite]
version = "0.2"
[dependencies.regex]
version = "1"
[dependencies.serde_urlencoded]
version = "0.7"
[dependencies.tower]
version = "0.4"
[features]
rt-tokio = ["aws-smithy-http/rt-tokio"]
default = ["rt-tokio"]
